# ticketing

./: database_backup.sql
TAV/: .gitignore  QUICKSTART.md  README.md
TAV_Old/backend/: Dockerfile  pyproject.toml  requirements.txt  test_current_user.py  test_jwt_manager.py
TAV_Old/backend/app/: __init__.py  config.py  dependencies.py  main.py
TAV_Old/backend/app/api/: deps.py
TAV_Old/backend/app/api/v1/: router.py
TAV_Old/backend/app/core/: jwt_manager.py
TAV_Old/backend/app/core/ai/: __init__.py  huggingface_manager.py  huggingface_search.py  manager.py
TAV_Old/backend/app/core/execution/: cleanup.py
TAV_Old/backend/app/core/nodes/: loader.py  registry.py
TAV_Old/backend/app/database/: __init__.py  base.py
TAV_Old/backend/app/database/migrations/: env.py
TAV_Old/backend/app/database/models/: __init__.py  file.py  idempotency_key.py  workflow.py  workflow_state.py
TAV_Old/backend/app/database/repositories/: __init__.py
TAV_Old/backend/app/schemas/: __init__.py  auth.py  workflow.py
TAV_Old/backend/app/security/: encryption.py
TAV_Old/backend/app/services/: code_validator.py  conversation_manager.py  file_cleanup.py  imap_service.py  twilio_service.py
TAV_Old/backend/app/utils/: __init__.py  network_share.py
TAV_Old/backend/scripts/: add_sample_data.py  cleanup_conversation_tables.py  cleanup_sqlite_tables.py  fix_stuck_execution.py  init_db.py  migrate_files_table.py
TAV_Old/backend/tests/: conftest.py
TAV_Old/backend/tests/unit/test_ai/: __init__.py  test_huggingface_manager.py  test_huggingface_search.py
TAV_Old/backend/tests/unit/test_api/: __init__.py  conftest.py  test_auth.py
TAV_Old/backend/tests/unit/test_config/: __init__.py  conftest.py
TAV_Old/backend/tests/unit/test_database/: __init__.py
TAV_Old/backend/tests/unit/test_execution/: test_context.py  test_graph_builder.py  test_graph_types.py  test_validation.py
TAV_Old/backend/tests/unit/test_nodes/: test_variables.py
TAV_Old/backend/tests/unit/test_workflows/: conftest.py
(+510 files in other folders)
